err/chirpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/chirpy'...
Compiling './lib/python3.5/site-packages/chirpy/command_line.py'...
*** Sorry: TabError: Missing parentheses in call to 'print' (command_line.py, line 55)
Compiling './lib/python3.5/site-packages/chirpy/configModule.py'...
***   File "./lib/python3.5/site-packages/chirpy/configModule.py", line 18
    os.mkdir(path, 0777)
                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/chirpy/helpModule.py'...
*** Sorry: TabError: Missing parentheses in call to 'print' (helpModule.py, line 23)
Compiling './lib/python3.5/site-packages/chirpy/logModule.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (logModule.py, line 20)
Compiling './lib/python3.5/site-packages/chirpy/parseModule.py'...
***   File "./lib/python3.5/site-packages/chirpy/parseModule.py", line 41
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chirpy/profileModule.py'...
*** Sorry: TabError: Missing parentheses in call to 'print' (profileModule.py, line 23)
Compiling './lib/python3.5/site-packages/chirpy/searchModule.py'...
***   File "./lib/python3.5/site-packages/chirpy/searchModule.py", line 20
    print 'Getting Configurations'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chirpy/streamModule.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (streamModule.py, line 15)
Compiling './lib/python3.5/site-packages/chirpy/streamer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (streamer.py, line 81)
Compiling './lib/python3.5/site-packages/chirpy/userModule.py'...
***   File "./lib/python3.5/site-packages/chirpy/userModule.py", line 18
    print 'Accessing User', user
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chirpy-1.0.6.egg-info'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/oauthlib'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1/rfc5849'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1/rfc5849/endpoints'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/clients'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/endpoints'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/grant_types'...
Listing './lib/python3.5/site-packages/oauthlib-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_oauthlib'...
Listing './lib/python3.5/site-packages/requests_oauthlib/compliance_fixes'...
Listing './lib/python3.5/site-packages/requests_oauthlib-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tweepy'...
Listing './lib/python3.5/site-packages/tweepy-3.5.0.dist-info'...
Listing './lib/python3.5/site-packages/twitter'...
Listing './lib/python3.5/site-packages/twitter-1.18.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
